# game_of_life

./: .gitignore  CMakeLists.txt  README.md  contributors.txt  license.txt
data/: brushs.txt
include/: brush_tool.hpp  callback_system.hpp  cpp_features.hpp  draw_function.hpp  game_gui.hpp  game_of_life.hpp  log.hpp  position.hpp
src/: brush_tool.cpp  game_gui.cpp  game_of_life.cpp  main.cpp
